opam-version: "2.0"
maintainer:   "Thibaut Gudin <tgudin@besport.com>"
authors:      "Thibaut Gudin <tgudin@besport.com>"
homepage:     "https://github.com/Thibaut-Gudin/ocaml-mixpanel"
bug-reports:  "https://github.com/Thibaut-Gudin/ocaml-mixpanel/issues"
dev-repo:     "https://github.com/Thibaut-Gudin/ocaml-mixpanel"
license:      "LGPL-2.1 with OCaml linking exception"
description: "Binding to the mixpanel plugin using ???"
synopsis: "Binding to the mixpanel plugin using ???"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.03.0" }
  ]
