opam-version: "2.0"
maintainer:   "Thibaut Gudin <tgudin@besport.com>"
authors:      "Thibaut Gudin <tgudin@besport.com>"
homepage:     "https://github.com/Thibaut-Gudin/ocaml-mixpanel"
bug-reports:  "https://github.com/Thibaut-Gudin/ocaml-mixpanel/issues"
dev-repo:     "git+https://github.com/Thibaut-Gudin/ocaml-mixpanel"
license:      "LGPL-2.1 with OCaml linking exception"
description: "Binding to the mixpanel plugin using gen_js_api"
synopsis: "Binding to the mixpanel plugin using gen_js_api"
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
depends: [
  "ocaml" { >= "4.03.0" }
  "gen_js_api"
  "js_of_ocaml" {>= "3.8.0" & < "3.9.0"}
  "js_of_ocaml-ppx" {>= "3.8.0" & < "3.9.0"}
  ]
